@@ -20,6 +20,8 @@ Version 1.0 to be released
 - Refactored UserIdentity generated by yiic webapp (Qiang)
 - Refactored CLinkPager (Qiang)
 - Refactored CFilter (Qiang)
+- Removed CClientScript::registerBodyScript and CClientScript::registerBodyScriptFile;
+  Added a position parameter to CClientScript::registerScript and CClientScript::registerScriptFile (Qiang)
 - Fixed a bug in CNumberValidator about checking upper limit (Qiang)
 - Fixed a bug in CHtml::dropDownList() which doesn't render the 'name' attribute (Qiang)
 
